[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scan-toolbox"
version = "0.1.0"
description = "A toolbox for scan processing and utilities."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
authors = [{name = "rpiRobotics"}]
keywords = ["scanning", "point-cloud", "robotics"]

dependencies = [
  "numpy",
  "scipy",
  "matplotlib",
  "sklearn",
  "open3d",
  "pyyaml",
  "general-robotics-toolbox",
  "robotics-utils @ git+https://github.com/rpiRobotics/robotics_utils.git"
]

[project.urls]
Homepage = "https://github.com/rpiRobotics/scan_toolbox"
Issues = "https://github.com/rpiRobotics/scan_toolbox/issues"

# Optional: define command-line tools
# [project.scripts]
# scan-utils = "scan_toolbox.scan_utils:main"
# scan-process = "scan_toolbox.scanProcess:cli"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["scan_toolbox*"]